--- a/frontend/src/components/UsersShow/UsersShow.css
+++ b/frontend/src/components/UsersShow/UsersShow.css
@@ -1,9 +1,9 @@
 #user-show-main{
-    border: 1px solid white;
+    /* border: 1px solid #e2e2e2; */
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
     display: flex;
-    flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-around;
     gap: 20px;
     padding: 20px;
@@ -13,7 +13,7 @@
     border-radius: 10px;
     box-shadow:10px ;
     width: 40%;
-    height: 70%;
+    height: 70vh;
     padding: 10px;
     border: 1px solid #e2e2e2;
     color: #e2e2e2;
@@ -29,9 +29,23 @@
 
 #health-metrics{
     margin: 10px;
+    padding: 10px;
     height: fit-content;
     width: 40%;
-    height: 50%;
+    height: 50vh;
+    border: 1px solid #e2e2e2;
+    color: #e2e2e2;
+    border-radius: 10px;
+    -webkit-box-shadow: 14px 18px 35px -11px rgba(0,0,0,0.75);
+    -moz-box-shadow: 14px 18px 35px -11px rgba(0,0,0,0.75);
+    box-shadow: 14px 18px 35px -11px rgba(0,0,0,0.75);
+}
+
+#social-metrics{
+    margin: 10px;
+    padding: 10px;
+    width: 100%;
+    height: 30vh;
     border: 1px solid #e2e2e2;
     color: #e2e2e2;
     border-radius: 10px;
