--- a/frontend/src/components/UsersShow/UsersShow.css
+++ b/frontend/src/components/UsersShow/UsersShow.css
@@ -5,6 +5,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    color: black;
     gap: 20px;
     padding: 20px;
 }
@@ -16,16 +17,22 @@
     height: 70vh;
     padding: 10px;
     border: 1px solid #e2e2e2;
-    color: #e2e2e2;
+    background-color: #e2e2e2;
+    /* color: black; */
     margin: 10px;
     -webkit-box-shadow: 14px 18px 35px -11px rgba(0,0,0,0.75);
     -moz-box-shadow: 14px 18px 35px -11px rgba(0,0,0,0.75);
     box-shadow: 14px 18px 35px -11px rgba(0,0,0,0.75);
 }
 
-.blur-header{
-    text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.62);
+.blur-header h2{
+    color: #1d1d1d;
 }
+
+.blur-header h3{
+    color: #1d1d1d;
+}
+
 
 #health-metrics{
     margin: 10px;
@@ -34,7 +41,7 @@
     width: 40%;
     height: 50vh;
     border: 1px solid #e2e2e2;
-    color: #e2e2e2;
+    background-color: #e2e2e2;
     border-radius: 10px;
     -webkit-box-shadow: 14px 18px 35px -11px rgba(0,0,0,0.75);
     -moz-box-shadow: 14px 18px 35px -11px rgba(0,0,0,0.75);
@@ -45,9 +52,7 @@
     margin: 10px;
     padding: 10px;
     width: 100%;
-    height: 30vh;
-    border: 1px solid #e2e2e2;
-    color: #e2e2e2;
+    background-color: #e2e2e2;
     border-radius: 10px;
     -webkit-box-shadow: 14px 18px 35px -11px rgba(0,0,0,0.75);
     -moz-box-shadow: 14px 18px 35px -11px rgba(0,0,0,0.75);
