--- a/frontend/src/components/UsersShow/UsersShow.css
+++ b/frontend/src/components/UsersShow/UsersShow.css
@@ -1,4 +1,4 @@
-#user-show-main {
+/* #user-show-main {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -34,4 +34,74 @@
   background-color: #007bff;
   border-radius: 50%;
   margin-right: 5px;
+}
+
+#profile-pic img {
+  height: 7rem;
+  width: 7rem;
+  border-radius: 50%;
+  margin-right: 3rem;
+} */
+
+#user-show-main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+}
+
+#general-info {
+  width: 60%;
+  margin: 20px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  display: flex;
+  flex-direction: row;
+}
+
+#profile-pic img {
+  height: 150px;
+  width: 150px;
+  border-radius: 50%;
+  margin-right: 30px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+#user-info {
+  flex: 1;
+}
+
+.blur-header h2 {
+  color: #333;
+  margin-bottom: 5px;
+}
+
+.blur-header h3 {
+  color: #555;
+}
+
+.blur-header h2,
+.blur-header h3 {
+  margin: 0;
+}
+
+.secondary-sport {
+  margin-bottom: 10px;
+}
+
+.attendee-circle {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background-color: #007bff;
+  border-radius: 50%;
+  margin-right: 5px;
+}
+
+/* Add more styles based on your specific design preferences */
+#user-info h2 {
+  color: black;
 }
