--- a/frontend/src/components/EventForm/EventForm.css
+++ b/frontend/src/components/EventForm/EventForm.css
@@ -104,7 +104,7 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 .location-result-container {
-  max-width: 70%;
+  /* max-width: 70%; */
 }
 
 
@@ -118,10 +118,11 @@ input[type="number"]::-webkit-outer-spin-button {
   flex-direction: column;
   margin: 0.25rem 0rem;
   max-width: 100%;
+  /* align-items: center; */
 }
 
 .location-result-container {
-  width: 100%; /* Set the width to 100% */
+  /* width: 100%; Set the width to 100% */
   /* max-width: 400px; Set a maximum width for better readability */
 }
 
@@ -133,6 +134,7 @@ input[type="number"]::-webkit-outer-spin-button {
   padding: 0.5rem; /* Add some padding for better spacing */
   border: 1px solid #F4FFFD; /* Add a border for better separation */
   cursor: pointer; /* Add a pointer cursor to indicate interactivity */
+  max-width: 26rem;
 }
 
 
