--- a/frontend/src/components/DiscoverPage/DiscoverPage.css
+++ b/frontend/src/components/DiscoverPage/DiscoverPage.css
@@ -167,7 +167,7 @@
   bottom: 0;
   border-radius: inherit; /* Inherit the border radius */
   z-index: -1;
-  background: linear-gradient(145deg, #BBE6E1 0%, rgb(207, 255, 192) 100%);
+  background: linear-gradient(63deg, #5cb270 0%, #f4f269 100%);
   opacity: 0;
   transition: opacity 0.3s ease-in-out;
 }
@@ -181,7 +181,7 @@
   bottom: 0;
   border-radius: inherit; /* Inherit the border radius */
   z-index: -1;
-  background: linear-gradient(145deg, #EEBADF 0%, rgba(250,130,76,1) 100%);
+  background: linear-gradient(145deg, #f7a2a1 0%, #f4d444 100%);
   opacity: 0;
   transition: opacity 0.3s ease-in-out;
 }
@@ -195,21 +195,21 @@
   bottom: 0;
   border-radius: inherit; /* Inherit the border radius */
   z-index: -1;
-  background: linear-gradient(63deg, rgb(255, 98, 98) 0%, rgb(254, 58, 71) 100%);
+  background: linear-gradient(63deg, #b94c98 0%, #f0073b 100%);
   opacity: 0;
   transition: opacity 0.3s ease-in-out;
 }
 
 .beginner {
-  background: linear-gradient(63deg, rgb(153, 246, 124) 0%, rgba(137,252,0,1) 100%);
+  background: linear-gradient(63deg, #f4f269 0%, #5cb270 100%);
 }
 
 .intermediate {
-  background: linear-gradient(63deg, rgba(250,130,76,1) 0%, rgba(255,89,100,1) 100%);
+  background: linear-gradient(63deg, #f4d444 0%, #f7a2a1 100%);
 }
 
 .advanced {
-  background: linear-gradient(63deg, rgb(254, 58, 71) 0%, rgb(255, 98, 98) 100%);
+  background: linear-gradient(63deg, #f0073b 0%, #b94c98 100%);
 }
 
 .sport-icon:hover::before {
