--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -1,6 +1,10 @@
 .auth-buttons {
     cursor: pointer;
-    margin: 0rem 0.5rem;
+    margin: 0rem 0rem;
+    background: linear-gradient(145deg, rgba(250,130,76,1) 0%, rgba(255,89,100,1) 100%);
+    transition: box-shadow 0.3s ease, color 0.3s ease;
+    font-family: 'Lexend', sans-serif;
+    margin-right: 0.5rem
 }
 
 .nav-container {
