--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -55,7 +55,7 @@ button {
   cursor: pointer;
   /* border-color: #F4FFFD; */
   /* border-width: 2px; */
-  background: linear-gradient(145deg, rgba(250,130,76,1) 0%, rgba(255,89,100,1) 100%);
+  /* background: linear-gradient(145deg, rgba(250,130,76,1) 0%, rgba(255,89,100,1) 100%); */
   color: #F4FFFD;
   font-family: 'Lexend';
   transition: box-shadow 0.3s ease-in-out;
