--- a/frontend/src/components/UsersShow/UsersShow.css
+++ b/frontend/src/components/UsersShow/UsersShow.css
@@ -62,6 +62,13 @@
   flex-direction: row;
 }
 
+#profile-pic{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
 #profile-pic img {
   height: 150px;
   width: 150px;
@@ -104,4 +111,15 @@
 /* Add more styles based on your specific design preferences */
 #user-info h2 {
   color: black;
+}
+
+input[type=text]{
+  border: none;
+  outline: none;
+  font-size: 2rem;
+  font-weight: 800;
+}
+input[type=text]:focus{
+  border: none;
+  outline: none;
 }
