--- a/frontend/src/components/UsersShow/UsersShow.css
+++ b/frontend/src/components/UsersShow/UsersShow.css
@@ -47,19 +47,20 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 20px;
+  justify-content: center;
 }
 
 #general-info {
-  width: 60%;
-  margin: 20px;
-  background-color: #fff;
+  height: 50rem;
+  width: 80%;
+  margin: 1rem;
+  /* background-color: #fff; */
   border: 1px solid #ddd;
-  border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  padding: 20px;
+  border-radius: 3rem;
   display: flex;
   flex-direction: row;
+  padding: 2rem;
+  gap: 3rem;
 }
 
 #profile-pic{
@@ -73,12 +74,11 @@
   height: 150px;
   width: 150px;
   border-radius: 50%;
-  margin-right: 30px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 #user-info {
-  flex: 1;
+  width: 50%;
 }
 
 .blur-header h2 {
