--- a/frontend/src/components/UsersShow/UsersShow.css
+++ b/frontend/src/components/UsersShow/UsersShow.css
@@ -54,7 +54,7 @@
   height: 50rem;
   width: 80%;
   margin: 1rem;
-  /* background-color: #fff; */
+  background-color: #fff;
   border: 1px solid #ddd;
   border-radius: 3rem;
   display: flex;
@@ -127,4 +127,22 @@
 
 .user-friend{
   color: black
+}
+
+.events-div{
+  height: 50rem;
+  width: 80%;
+  margin: 1rem;
+  /* background-color: #fff; */
+  /* color: black; */
+  border: 1px solid #ddd;
+  border-radius: 3rem;
+  display: flex;
+  flex-direction: row;
+  padding: 2rem;
+  gap: 3rem;
+}
+
+.event-tile{
+  color: black;
 }
